# dopterian-plus

./: LICENSE  README.md  example.py  licence.txt  pyproject.toml
docs/source/: conf.py  cut_postage_stamp.rst  dopterian.rst  index.rst
src/dopterianPlus/: auxiliary_functions_sdss.py  calc_FWHM.py  cut_postage_stamp.py  dopterian.py  dopterian_sdss.py
src/dopterianPlus/data/: PSF_F160W.fits  PSF_F475W.fits  PSF_F625W.fits  PSF_F775W.fits  PSF_F814W.fits  PSF_OUTPUT.fits  RMS_F160W.fits  RMS_F475W.fits  RMS_F625W.fits  RMS_F775W.fits  RMS_F814W.fits  SCI_F160W.fits  SCI_F475W.fits  SCI_F625W.fits  SCI_F775W.fits  SCI_F814W.fits  SCI_OUTPUT.fits  SKY_F160W.fits  SKY_F475W.fits  SKY_F625W.fits  sky_F775W.fits  sky_F814W.fits
